--- a/Eventa.Mobile/Eventa/App.axaml
+++ b/Eventa.Mobile/Eventa/App.axaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     RequestedThemeVariant="Light">
     <Application.Styles>
+        <StyleInclude Source="avares://AsyncImageLoader.Avalonia/AdvancedImage.axaml" />
         <FluentTheme>
             <FluentTheme.Palettes>
                 <ColorPaletteResources
