--- a/Eventa.Mobile/Eventa/Views/Events/BrowseOrganizerEventsView.axaml
+++ b/Eventa.Mobile/Eventa/Views/Events/BrowseOrganizerEventsView.axaml
@@ -84,121 +84,125 @@
     <UserControl.Resources>
         <converters:StringNotEmptyConverter x:Key="StringNotEmpty" />
     </UserControl.Resources>
-    <Grid RowDefinitions="Auto,Auto,*,Auto">
-        <!--  Header  -->
-        <Border
-            Grid.Row="0"
-            Margin="0,0,0,24"
-            BoxShadow="5 5 10 0 DarkGray">
-            <TextBlock Classes="Title" Text="My Events" />
-        </Border>
+    <Grid>
+        <Grid IsVisible="{Binding !IsCreating}" RowDefinitions="Auto,Auto,*,Auto">
+            <!--  Header  -->
+            <Border
+                Grid.Row="0"
+                Margin="0,0,0,24"
+                BoxShadow="5 5 10 0 DarkGray">
+                <TextBlock Classes="Title" Text="My Events" />
+            </Border>
 
-        <Grid
-            Grid.Row="1"
-            ColumnDefinitions="*, auto"
-            IsVisible="{Binding !IsCompact}">
-            <TextBlock
-                Margin="60,0,0,0"
-                Classes="Title"
-                FontWeight="Bold"
-                Text="Planned"
-                TextAlignment="Center" />
-            <Button
-                Grid.Column="1"
-                Width="50"
-                Height="50"
-                Margin="0,0,20,0"
-                Padding="0"
-                HorizontalAlignment="Left"
-                Background="Transparent"
-                Classes="AddButton">
-                <Grid>
-                    <Ellipse Fill="#FFAAAA" />
-                    <TextBlock
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        FontSize="48"
-                        FontWeight="Thin"
-                        Foreground="White"
-                        Text="+">
-                        <TextBlock.RenderTransform>
-                            <TranslateTransform X="1" Y="-3" />
-                        </TextBlock.RenderTransform>
-                    </TextBlock>
-                </Grid>
-            </Button>
+            <Grid
+                Grid.Row="1"
+                ColumnDefinitions="*, auto"
+                IsVisible="{Binding !IsCompact}">
+                <TextBlock
+                    Margin="60,0,0,0"
+                    Classes="Title"
+                    FontWeight="Bold"
+                    Text="Planned"
+                    TextAlignment="Center" />
+                <Button
+                    Grid.Column="1"
+                    Width="50"
+                    Height="50"
+                    Margin="0,0,20,0"
+                    Padding="0"
+                    HorizontalAlignment="Left"
+                    Background="Transparent"
+                    Classes="AddButton"
+                    Command="{Binding CreateEventCommand}">
+                    <Grid>
+                        <Ellipse Fill="#FFAAAA" />
+                        <TextBlock
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            FontSize="48"
+                            FontWeight="Thin"
+                            Foreground="White"
+                            Text="+">
+                            <TextBlock.RenderTransform>
+                                <TranslateTransform X="0" Y="-3" />
+                            </TextBlock.RenderTransform>
+                        </TextBlock>
+                    </Grid>
+                </Button>
+            </Grid>
+
+            <!--  Events List  -->
+            <ScrollViewer
+                Grid.Row="2"
+                MaxWidth="200"
+                MaxHeight="100"
+                ScrollViewer.IsScrollChainingEnabled="False">
+                <TextBlock
+                    FontFamily="{StaticResource Kadwa}"
+                    Foreground="#FF8181"
+                    IsVisible="{Binding ErrorMessage, Converter={StaticResource StringNotEmpty}}"
+                    Text="{Binding ErrorMessage}"
+                    TextAlignment="Center"
+                    TextWrapping="WrapWithOverflow" />
+            </ScrollViewer>
+            <ScrollViewer Grid.Row="2">
+                <ItemsControl ItemsSource="{Binding Events}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Border
+                                Height="161"
+                                Margin="30,5,30,0"
+                                Classes="EventCard">
+                                <Grid ColumnDefinitions="Auto,*">
+                                    <!--  Event Image Placeholder  -->
+                                    <Border
+                                        Grid.Column="0"
+                                        Width="115"
+                                        Height="97"
+                                        Background="#D9D9D9"
+                                        CornerRadius="8" />
+
+                                    <!--  Event Details  -->
+                                    <StackPanel
+                                        Grid.Column="1"
+                                        Margin="16,-30,0,0"
+                                        VerticalAlignment="Center">
+                                        <TextBlock
+                                            Margin="0"
+                                            Classes="EventTitle"
+                                            FontSize="24"
+                                            FontWeight="Normal"
+                                            Text="{Binding Title}" />
+                                        <TextBlock Classes="EventDetails">
+                                            <Run Text="{Binding FirstDateTime}" />
+                                            <Run Text=" - " />
+                                            <Run Text="{Binding LastDateTime}" />
+                                        </TextBlock>
+                                        <TextBlock Classes="EventDetails" Text="{Binding Address}" />
+                                        <TextBlock Classes="EventDetails" Text="{Binding Price, StringFormat='Price: {0}'}" />
+                                        <TextBlock Classes="EventDetails" Text="{Binding TicketsSold, StringFormat='Tickets sold: {0}'}" />
+                                    </StackPanel>
+
+                                    <!--  Edit Button  -->
+                                    <Button
+                                        Grid.Column="1"
+                                        VerticalAlignment="Bottom"
+                                        Classes="EditButton"
+                                        Command="{Binding $parent[UserControl].((vm:BrowseOrganizerEventsViewModel)DataContext).EditEventCommand}"
+                                        CommandParameter="{Binding}">
+                                        <TextBlock Text="Edit →" />
+                                    </Button>
+                                </Grid>
+                            </Border>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
+            <Separator
+                Grid.Row="3"
+                Height="2"
+                IsVisible="{Binding IsCompact}" />
         </Grid>
-
-        <!--  Events List  -->
-        <ScrollViewer
-            Grid.Row="2"
-            MaxWidth="200"
-            MaxHeight="100"
-            ScrollViewer.IsScrollChainingEnabled="False">
-            <TextBlock
-                FontFamily="{StaticResource Kadwa}"
-                Foreground="#FF8181"
-                IsVisible="{Binding ErrorMessage, Converter={StaticResource StringNotEmpty}}"
-                Text="{Binding ErrorMessage}"
-                TextAlignment="Center"
-                TextWrapping="WrapWithOverflow" />
-        </ScrollViewer>
-        <ScrollViewer Grid.Row="2">
-            <ItemsControl ItemsSource="{Binding Events}">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Border
-                            Height="161"
-                            Margin="30,5,30,0"
-                            Classes="EventCard">
-                            <Grid ColumnDefinitions="Auto,*">
-                                <!--  Event Image Placeholder  -->
-                                <Border
-                                    Grid.Column="0"
-                                    Width="115"
-                                    Height="97"
-                                    Background="#D9D9D9"
-                                    CornerRadius="8" />
-
-                                <!--  Event Details  -->
-                                <StackPanel
-                                    Grid.Column="1"
-                                    Margin="16,-30,0,0"
-                                    VerticalAlignment="Center">
-                                    <TextBlock
-                                        Margin="0"
-                                        Classes="EventTitle"
-                                        FontSize="24"
-                                        FontWeight="Normal"
-                                        Text="{Binding Title}" />
-                                    <TextBlock Classes="EventDetails">
-                                        <Run Text="{Binding FirstDateTime}" />
-                                        <Run Text=" - " />
-                                        <Run Text="{Binding LastDateTime}" />
-                                    </TextBlock>
-                                    <TextBlock Classes="EventDetails" Text="{Binding Address}" />
-                                    <TextBlock Classes="EventDetails" Text="{Binding Price, StringFormat='Price: {0}'}" />
-                                    <TextBlock Classes="EventDetails" Text="{Binding TicketsSold, StringFormat='Tickets sold: {0}'}" />
-                                </StackPanel>
-
-                                <!--  Edit Button  -->
-                                <Button
-                                    Grid.Column="1"
-                                    VerticalAlignment="Bottom"
-                                    Classes="EditButton"
-                                    Command="{Binding $parent[UserControl].((vm:BrowseOrganizerEventsViewModel)DataContext).EditEventCommand}"
-                                    CommandParameter="{Binding}">
-                                    <TextBlock Text="Edit →" />
-                                </Button>
-                            </Grid>
-                        </Border>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </ScrollViewer>
-        <Separator
-            Grid.Row="3"
-            Height="2"
-            IsVisible="{Binding IsCompact}" />
+        <UserControl Content="{Binding CreatePage}" IsVisible="{Binding IsCreating}" />
     </Grid>
 </UserControl>
